trying to fix missing padding on select elements of the form

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,7 +57,7 @@ form{
 			display: block;
 			width: 100%;
 			margin: 0;
-			padding: 0.5rem;
+			padding: 0.5rem !important;
 			color: $main-color-inv;
 			background-color: $main-color;
 			border: none;
